# AIOJ

./: .gitignore  README.md  docker-compose.yml  init-admin.sql  功能说明文档.md  建表语句.sql
AIOJ-backend/: .dockerignore  Dockerfile  requirements.txt
AIOJ-backend/app/: main.py
AIOJ-backend/app/core/: config.py  deps.py  security.py
AIOJ-backend/app/db/: deps.py  models.py  redis.py  session.py
AIOJ-backend/app/models/: bookmark.py  discussion.py  problem_set.py  problems.py  submissions.py  user_stats.py  users.py
AIOJ-backend/app/routers/: adminRouter.py  authRouter.py  bookmarkRouter.py  discussionRouter.py  problemRouter.py  problemSetRouter.py  statsRouter.py  submissionRouter.py  userRouter.py
AIOJ-backend/app/schemas/: adminSchema.py  authSchema.py  (+7 more)
AIOJ-frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
AIOJ-frontend/src/: main.js
AIOJ-judge/: .dockerignore  CMakeLists.txt  Dockerfile  judge.conf
AIOJ-judge/config/: judge.conf
AIOJ-judge/include/common/: config.h  types.h
AIOJ-judge/include/judge/: judge_worker.h  language_handler.h  sandbox.h
AIOJ-judge/include/redis/: redis_client.h
AIOJ-judge/include/thread_pool/: thread_pool.h
AIOJ-judge/src/: main.cpp
AIOJ-judge/src/common/: config.cpp  types.cpp
AIOJ-judge/src/judge/: judge_worker.cpp  language_handler.cpp  sandbox.cpp
AIOJ-judge/src/redis/: redis_client.cpp
AIOJ-judge/src/thread_pool/: thread_pool.cpp
AIOJ-judge/test/: test_config.cpp  test_judge.cpp  test_main.cpp  test_thread_pool.cpp
AIOJ-judge/testcases/1/: 3.in
AIOJ-judge/testcases/6/: 2.in
(+44 files in other folders)
